@@ -5,7 +5,7 @@
 Replaces pure-ruby OpenGL API calls in opengl-bindings ( https://github.com/vaiorabbit/ruby-opengl ) with native C function calls.
 
 *   Created : 2015-10-11
-*   Last modified : 2015-11-03
+*   Last modified : 2015-11-15
 
 ## Features ##
 
