@@ -1,3 +1,11 @@
+2015-11-15  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* ext/opengl_c/rogl_pointer.c|h : Added.
+
+2015-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* ext/opengl_c/rogl_platform.c|h : Added.
+
 2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* ext/opengl_c/rogl.c (CHECK_PROC_ADDRESS): Added for initialization order issue.
